<resources>
    <string name="app_name">ProjectAkhir</string>
    <string name="Tb">Tambah Gaji </string>
    <string name="Lh">Lihat Daftar Gaji</string>
    <string name="tv">Selamat Datang Di Aplikasi Data Gaji Karyawan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inputnama">Masukan Nama Anda :</string>
    <string name="nama">Nama Anda</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="laki">Laki-laki</string>
    <string name="perem">Perempuan</string>
    <string name="hj">Jumlah Gaji Diterima</string>
    <string name="jmlhr">Jumlah Hari Bekerja</string>
    <string name="hr1">1 hari</string>
    <string name="hr2">2 hari</string>
    <string name="hr3">3 hari</string>
    <string name="hr4">4 hari</string>
    <string name="hr5">5 hari</string>
    <string name="hr6">6 hari</string>
    <string name="hr7">7 hari</string>
    <string name="hr8">8 hari</string>
    <string name="hr9">9 hari</string>
    <string name="hr10">10 hari</string>
    <string name="hr11">11 hari</string>
    <string name="hr12">12 hari</string>
    <string name="hr13">13 hari</string>
    <string name="hr14">14 hari</string>
    <string name="hr15">15 hari</string>
    <string name="hr16">16 hari</string>
    <string name="hr17">17 hari</string>
    <string name="hr18">18 hari</string>
    <string name="hr19">19 hari</string>
    <string name="hr20">20 hari</string>
    <string name="hr21">21 hari</string>
    <string name="hr22">22 hari</string>
    <string name="hr23">23 hari</string>
    <string name="hr24">24 hari</string>
    <string name="hr25">25 hari</string>
    <string name="hr26">26 hari</string>
    <string name="hr27">27 hari</string>
    <string name="hr28">28 hari</string>
    <string name="al">No Pegawai</string>
    <string name="alanda">No pegawai</string>
    <string name="tglgj">Tanggal Gaji</string>
    <string name="tanggalgaji">Tanggal Gaji Diberikan</string>

</resources>
